[gd_scene load_steps=9 format=3 uid="uid://caemkjtipmro4"]

[ext_resource type="Script" uid="uid://2fg4fo3ulyca" path="res://scene_change.gd" id="1_daubm"]
[ext_resource type="Texture2D" uid="uid://ibqxvke3ce42" path="res://Battle City (Japan)-0.png" id="2_xyncu"]
[ext_resource type="FontFile" uid="uid://bot5a5dcxci6n" path="res://fonts/PressStart2P-Regular.ttf" id="3_c7pyx"]
[ext_resource type="AudioStream" uid="uid://b7hynhkaiynf6" path="res://sound/levelstarting.ogg" id="4_a5by8"]

[sub_resource type="Animation" id="Animation_uk5wp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectUp2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -512)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRectDown2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 896)]
}

[sub_resource type="Animation" id="Animation_m5aww"]
resource_name = "moveDown"
length = 0.233335
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectUp2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -512), Vector2(0, -64)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRectDown2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 896), Vector2(0, 448)]
}

[sub_resource type="Animation" id="Animation_yvxxw"]
resource_name = "moveUp"
length = 0.233335
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectUp2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -64), Vector2(0, -512)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRectDown2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 448), Vector2(0, 896)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hxjdk"]
_data = {
&"RESET": SubResource("Animation_uk5wp"),
&"moveDown": SubResource("Animation_m5aww"),
&"moveUp": SubResource("Animation_yvxxw")
}

[node name="SceneChange" type="Node2D"]
script = ExtResource("1_daubm")

[node name="ColorRectUp2" type="ColorRect" parent="."]
z_index = 998
offset_top = -512.0
offset_right = 1024.0
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="ColorRectDown2" type="ColorRect" parent="."]
z_index = 998
offset_top = 896.0
offset_right = 1024.0
offset_bottom = 1408.0
color = Color(0.388235, 0.388235, 0.388235, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hxjdk")
}

[node name="BattleCity(japan)-0" type="Sprite2D" parent="."]
visible = false
position = Vector2(512, 448)
scale = Vector2(4, 4)
texture = ExtResource("2_xyncu")

[node name="Stage" type="RichTextLabel" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 999
offset_left = 384.0
offset_top = 416.0
offset_right = 468.0
offset_bottom = 432.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("3_c7pyx")
text = "STAGE"

[node name="StageNum" type="RichTextLabel" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 999
offset_left = 552.0
offset_top = 416.0
offset_right = 596.0
offset_bottom = 432.0
scale = Vector2(2, 2)
theme_override_fonts/normal_font = ExtResource("3_c7pyx")
text = "1"
text_direction = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_a5by8")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.4
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
